<resources>
    <string name="app_name">gky401</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yemek_Tarifleri">Yemek Tarifleri</string>
    <string name="yemek_listesi">Yemek Listesi</string>
    <string name="vki">VKI Hesaplama</string>
    <string name="sehirler">Şehirler</string>
    <string name="cats">Kediler</string>


</resources>
