<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_vki"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/vki" />

    <item
        android:id="@+id/navigation_yemek_listesi"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/yemek_listesi" />

    <item
        android:id="@+id/navigation_yemek_tarifleri"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/yemek_Tarifleri" />
    <item
        android:id="@+id/navigation_sehirler"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/sehirler" />
    <item
        android:id="@+id/navigation_cats"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/cats" />
</menu>
